add section experience

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@ html {
   scroll-behavior: smooth;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 .brick {
   background-image: url("../../public/images/brickWall.webp");
   background-size: 50%;
