--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,11 @@ a {
   text-shadow: 0 8px #000000;
   box-shadow: 3px 3px #000000;
 }
+
+.box-project::-webkit-scrollbar {
+  display: none;
+}
+
+button:hover {
+  scale: 106%;
+}
